# benchkit

./: .flake8  .gitignore  .gitlab-ci.yml  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MAINTAINERS  README.md  ROADMAP.md  default.nix  flake.nix  lock.x86_64-linux.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: codefmt.yml
.nix/: default.nix  lock.x86_64-linux.json
benchkit/: __init__.py  benchmark.py  campaign.py  lwchart.py  setup.py
benchkit/adb/: __init__.py  fastboot.py  flash.py  netiface.py  usb.py
benchkit/charts/: __init__.py  analyses.py  config.py  dataframes.py  gant.py  interactivecharts.py  printedcharts.py
benchkit/cli/: __init__.py  binstall.py  findvenv.py  generate.py  init.py  pathsvenv.py  run.py
benchkit/commandattachments/: __init__.py  klockstat.py  libbpftools.py  llcstat.py  offcputime.py  signal.py  tcpdump.py  threadprofiler.py  tracecmd.py
benchkit/commandwrappers/: __init__.py  env.py  javaperf.py  javaspeedupstack.py  jvmxlog.py  ltrace.py  ncu.py  ncu2.py  nice.py  numactl.py  perf.py  perflock.py  speedupstack.py  strace.py  taskset.py  tcpdump.py  trace-cmd.py  tracecmd.py  valgrind.py
benchkit/communication/: __init__.py  docker.py  pty.py  uart.py  utils.py
benchkit/core/: benchmark.py  validatebench.py
benchkit/dependencies/: __init__.py  dependency.py  executables.py  library.py  packagemanagers.py  packages.py
benchkit/engine/: executor.py  runonce.py  stepper.py
benchkit/hdc/: __init__.py
benchkit/helpers/: sql.py
benchkit/hooks/: stressNg.py
benchkit/quick/: __init__.py
benchkit/remote/: __init__.py  remotekernel.py
benchkit/sharedlibs/: __init__.py  assignlib.py  precompiled.py  tiltlib.py
benchkit/shell/: args.py  ast_shell_out.py  commands.py  shell.py  shellasync.py  utils.py
benchkit/utils/: buildtools.py  dir.py  dynimports.py  fetchtools.py  ftrace.py  gdb.py  git.py  json_encoders.py  logging.py  lscpu.py  misc.py  netplan.py  parselog.py  system.py  systemactions.py  tee.py  test_shell.py  test_variables.py  types.py  variables.py
docs/: README.md  benchmark.md  campaign.md  getting_started.md  hooks.md  nix.md  wrappers.md
docs/benchmarks/: authoring.md
examples/android/: campaign_android.py
examples/appstart/: campaign_appstart.py
examples/assign/: campaignFollowingLocks.py  campaignPar.py  campaignParSize.py  campaignSeq.py  campaignVaria.py  dependency-paths.txt
examples/blender/: campaign.py  configure.sh
examples/cameracampaign/: CMakeLists.txt  camera_campaign.py  camera_campaign_remote.py  requirements.txt
examples/cameracampaign/src/: camera_processing.cpp
examples/cloudsuite/: 0001-faban-log-seed.patch  0002-faban-log-thread-ops.patch  README.md  campaign_cloudsuite.py
examples/cmdbench/: dd.py  ddopt.py
examples/cpppathtracer/: campaign.py  configure.sh  dependency-paths.txt
examples/cuda_samples_JPEGencoder/: README.md  gpu_jpeg_encoder_campaign.py  gpu_jpeg_encoder_campaign_ncu.py  requirements.txt
examples/cuda_samples_matmul/: README.md  matrixmul_campaign.py  matrixmul_campaign_ncu.py
examples/cyclictest/: benchmark.py  configure.sh
examples/dacapobench/: .gitignore  README.md  benchmark_cache.txt  benchmark_dacapobench.py  campaign_dacapobench.py  clean.sh  local.properties  requirements.txt  setup-deps.sh  speedupstackwrapper.py
examples/dat3m/: campaign_dat3m.py  campaign_regression.py  requirements.txt  run_vsyncer.py
examples/ftrace/: ftrace_bench.py
examples/gpu_scheduling/: README.md  campaign_gpus.py  campaign_libsmctrl.py  generate_config.py
examples/gpus/: campaign_gpus.py  campaign_nsys_ncu.py  dependency-paths.txt
examples/gpus_sycl/: campaign_syclcuda.py  dependency-paths.txt  requirements.txt
examples/gpus_sycl/src/sycl/src/: CMakeLists.txt  add.cpp  matmul.cpp
examples/heater_parallel/: configure.sh  dependency-paths.txt  heater.c  heater_parallel.py  heater_parallel_campaign.py  requirements.txt
examples/heater_sequential/: heater.c  heater_sequential.py  heater_sequential_campaign.py
examples/ipc/: .gitignore  ipc.py
examples/kyotocabinet/: README.md  campaign_kyotocabinet.py  campaign_kyotocabinet_flame.py  campaign_kyotocabinet_locks.py  campaign_kyotocabinet_perf.py  campaign_kyotocabinet_stable.py  dependency-paths.txt
examples/lusearch/: README.md  benchmark_lusearch.py  campaign_lusearch.py
examples/mapreduce/: campaign_mapreduce.py  dependency-paths.txt
examples/membench/: README.md  campaign_membench.py  dependency-paths.txt
examples/memcached/: README.md  campaign_memcached.py  requirements.txt
examples/metis/: README.md  campaign_mapreduce.py  campaign_metis.py  (+2 more)
examples/tilt/bench/: CMakeLists.txt  atomic_bench.cpp  bench_atomic.cpp  bench_mutex.cpp  bench_mutex_moderate.cpp  mutex.c  mutex_bench.c  mutex_bench.cpp  mutexbench_moderate.cpp  test_mutex.c
examples/tilt/bench/include/: config.h.in
examples/tilt/locks/: CMakeLists.txt  caslock.c  clhlock.c  hemlock.c  mcslock.c  prefetch.diff  reciplock.c  ticketlock.c  twalock.c
plotbench/: README.md  configure.sh  plotbench.sh  requirements.txt
scripts/: add_paths_venv.py  add_paths_venv.sh  all_checks.sh  check_final_newline.py  generate-html.sh  install_deephier_header.py  install_venv.py  install_venv.sh  list_missing_copyright.py  list_missing_copyright.sh  readme-windows.md  remotetmux.py  run-campaign.sh  tmux.py
tests/: benchmark_errors.py  hdc_api.py  test_adb_api.py  test_android_ftrace.py  test_asyncprocesserror.py  test_asyncprocesskill.py  test_benchmark.py  test_cmd.py  test_commlayer.py  test_curl.py  test_even_order.py  test_flasher.py  test_ftrace.py  test_git_init.py  test_hdc_api.py  test_logging.py  test_mount.py  test_pipe_shell.py  test_pred.py  test_programmer.py  test_pty.py  test_sed.py  test_tar.py  test_transfer.py  test_uart.py
tutorials/leveldb-bench/tiltlocks/: CMakeLists.txt  caslock.c  vcaslock.c
tutorials/libvsync-locks/microbench/: CMakeLists.txt
tutorials/libvsync-locks/microbench/include/: config.h.in
tutorials/libvsync-locks/microbench/src/: libvsync-locks.c
(+704 files in other folders)
