[project]
name = "pybenchkit"
version = "0.0.1"
authors = [
  { name="Antonio Paolillo", email="antonio@paolillo.be" },
]
description = "A push-button end-to-end performance evaluation pipeline for automatically exploring the parameter space."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/open-s4c/benchkit"
Issues = "https://github.com/open-s4c/benchkit/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
  "benchkit/",
  "examples/",
  "plotbench/",
  "scripts/",
  "tests/",
  "tutorials/",
]
exclude = [
  "venv*/",
  ".venv*/",
]

[tool.black]
line-length = 100
target-version = ['py310']

exclude = '''
^/(
  (
      venv
    | tutorials/leveldb-bench/deps
    | plotbench/venv
  )/
  | plotbench/src/assets/defaultcustomsrc\.py
)
'''

[tool.isort]
profile = "black"
skip = [
    "tutorials/leveldb-bench/deps/",
    "plotbench/venv"
]
skip_glob = ["**/venv/**/*"]
